--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <h2 class="legenda"></h2>
     </main>
 
+    <footer>
+        <h3>Autor: <a href="https://www.linkedin.com/in/nicolas-silva-b53b16327/">Nicolas Silva</a></h2>
+    </footer>
+
+
     
 </body>
 </html>
