--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <h3>Autor: <a href="https://www.linkedin.com/in/nicolas-silva-b53b16327/">Nicolas Silva</a></h2>
     </footer>
 
+    <div id="carregando">
+        <h1>Carregando<span id="loadingPoints">...</span><h1>
+    </div>
+
 
     
 </body>
